src/main/fabric8/dc.yml
apiVersion: v1
kind: DeploymentConfig
metadata:
  labels:
    app: ${project.artifactId}
  name: ${project.artifactId}
spec:
  replicas: 1
  selector:
    deploymentconfig: ${project.artifactId}
  template:
    metadata:
      labels:
        app: ${project.artifactId}
        deploymentconfig: ${project.artifactId}
    spec:
      containers:
      - name: ${project.artifactId}
        image: ${project.artifactId}
        ports:
        - containerPort: 8443
          protocol: TCP
        resources: {}
        volumeMounts:
        - mountPath: /var/run/secrets/java.io/keystores
          name: keystore-volume
      volumes:
      - name: keystore-volume
        emptyDir: {}
      - name: service-certs
        secret:
          secretName: service-certs
