src/main/fabric8/svc.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.alpha.openshift.io/serving-cert-secret-name: service-certs
  labels:
    app: ${project.artifactId}
  name: ${project.artifactId}
spec:
  ports:
  - name: 8443-tcp
    port: 8443
    protocol: TCP
    targetPort: 8443
  selector:
    deploymentconfig: ${project.artifactId}
