src/main/fabric8/route.yml
apiVersion: v1
kind: Route
metadata:
  labels:
    app: ${project.artifactId}
  name: ${project.artifactId}
spec:
  port:
    targetPort: 8443-tcp
  tls:
    termination: reencrypt
  to:
    kind: Service
    name: ${project.artifactId}
    weight: 100
  wildcardPolicy: None
